<resources>
    <string name="a">Navigate home</string>
    <string name="b">Navigate up</string>
    <string name="c">More options</string>
    <string name="d">Done</string>
    <string name="e">See all</string>
    <string name="f">Choose an app</string>
    <string name="g">OFF</string>
    <string name="h">ON</string>
    <string name="i">Search…</string>
    <string name="j">Clear query</string>
    <string name="k">Search query</string>
    <string name="l">Search</string>
    <string name="m">Submit query</string>
    <string name="n">Voice search</string>
    <string name="o">Share with</string>
    <string name="p">Share with %s</string>
    <string name="q">Collapse</string>
    <string name="r">Search</string>
    <string name="s">999+</string>
    <string name="t">Settings</string>
    <string name="u">Use this option as default</string>
    <string name="v">Set</string>
    <string name="w">%1$s file(s) selected, %2$s MB in total</string>
    <string name="x">%1$s selected</string>
    <string name="y">OK</string>
    <string name="z">Always allow</string>
    <string name="a0">Cancel</string>
    <string name="a1">Cancel</string>
    <string name="a2">Canceled</string>
    <string name="a3">Cancel</string>
    <string name="a4">Update</string>
    <string name="a5">Favorite</string>
    <string name="a6">%1$d days after</string>
    <string name="a7">%1$d days before</string>
    <string name="a8">Gregorian</string>
    <string name="a9">Hide Lunar</string>
    <string name="a_">Lunar</string>
    <string name="aa">1 day after</string>
    <string name="ab">1 day before</string>
    <string name="ac">Show Gregorian</string>
    <string name="ad">Show Lunar</string>
    <string name="ae">Today</string>
    <string name="af">d</string>
    <string name="ag">h</string>
    <string name="ah">m</string>
    <string name="ai">m</string>
    <string name="aj">s</string>
    <string name="ak">Set</string>
    <string name="al">y</string>
    <string name="am">Answer</string>
    <string name="an">Deny</string>
    <string name="ao">Disable</string>
    <string name="ap">Download Updates</string>
    <string name="aq">Downloaded</string>
    <string name="ar">Using slider control. Currently set to %1$s</string>
    <string name="as">Every day</string>
    <string name="at">FR</string>
    <string name="au">Release to refresh</string>
    <string name="av">h</string>
    <string name="aw">Refreshing</string>
    <string name="ax">Last refresh</string>
    <string name="ay">h ago</string>
    <string name="az">Just now</string>
    <string name="b0">min ago</string>
    <string name="b1">s ago</string>
    <string name="b2">Saving image</string>
    <string name="b3">Loading</string>
    <string name="b4">m</string>
    <string name="b5">MO</string>
    <string name="b6">Once</string>
    <string name="b7">Today</string>
    <string name="b8">Yesterday</string>
    <string name="b9">Request for permission</string>
    <string name="b_">%1$s requests %3$d permission(s) including %2$s</string>
    <string name="ba">OK</string>
    <string name="bb">Allow push</string>
    <string name="bc">Bluetooth</string>
    <string name="bd">Dial</string>
    <string name="be">Read CallLog</string>
    <string name="bf">Camera (Photo/Video)</string>
    <string name="bg">Close</string>
    <string name="bh">Read Contacts</string>
    <string name="bi">Pop-up push</string>
    <string name="bj">Cancel</string>
    <string name="bk">OK</string>
    <string name="bl">Locate</string>
    <string name="bm">Cellular data</string>
    <string name="bn">NFC</string>
    <string name="bo">Deny</string>
    <string name="bp">Block</string>
    <string name="bq">Internet</string>
    <string name="br">Open</string>
    <string name="bs">Read MMS</string>
    <string name="bt">Read SMS</string>
    <string name="bu">Local/call recordings</string>
    <string name="bv">Call Recordings</string>
    <string name="bw">Send MMS</string>
    <string name="bx">Send SMS</string>
    <string name="by">Turn on Bluetooth</string>
    <string name="bz">Turn on mobile network</string>
    <string name="c0">Turn on WLAN</string>
    <string name="c1">WLAN</string>
    <string name="c2">Like</string>
    <string name="c3">Pull down to refresh</string>
    <string name="c4">Exit</string>
    <string name="c5">SA</string>
    <string name="c6">Search</string>
    <string name="c7">Search</string>
    <string name="c8">Search</string>
    <string name="c9">Clear</string>
    <string name="c_">Search</string>
    <string name="ca">s</string>
    <string name="cb">SU</string>
    <string name="cc">TH</string>
    <string name="cd">Schedule</string>
    <string name="ce">Leap month</string>
    <string name="cf">TU</string>
    <string name="cg">Updating</string>
    <string name="ch">Selected</string>
    <string name="ci">Not selected</string>
    <string name="cj">Voice Search</string>
    <string name="ck">WE</string>
    <string name="cl">Weekend</string>
    <string name="cm">Weekdays</string>
    <string name="cn">OK</string>
    <string name="co">More</string>
    <string name="cp">Cancel</string>
    <string name="cq">All</string>
    <string name="cr">None</string>
    <string name="cs">%d Item(s) Selected</string>
    <string name="ct">OK</string>
    <string name="cu">Always allow</string>
    <string name="cv">d</string>
    <string name="cw">h</string>
    <string name="cx">m</string>
    <string name="cy">m</string>
    <string name="cz">s</string>
    <string name="d0">y</string>
    <string name="d1">Network unavailable. Please check your network settings.</string>
    <string name="d2">Allow</string>
    <string name="d3">Never ask after denied</string>
    <string name="d4">Always allow</string>
    <string name="d5">Permission request</string>
    <string name="d6">Deny</string>
    <string name="d7">%1$s requests %3$d permission(s) to %2$s</string>
    <string name="d8">%1$s needs %2$s %3$d permissions</string>
    <string name="d9">Ask for the following permissions</string>
    <string name="d_">Bluetooth</string>
    <string name="da">WLAN</string>
    <string name="db">Network connections</string>
    <string name="dc">Other</string>
    <string name="dd">OK</string>
    <string name="de">Allow push</string>
    <string name="df">control Bluetooth</string>
    <string name="dg">Dial</string>
    <string name="dh">Read call logs</string>
    <string name="di">Camera (Photo/Video)</string>
    <string name="dj">Off</string>
    <string name="dk">Read contacts</string>
    <string name="dl">Push pop-ups</string>
    <string name="dm">Cancel</string>
    <string name="dn">OK</string>
    <string name="do">Location</string>
    <string name="dp">Cellular data</string>
    <string name="dq">control NFC</string>
    <string name="dr">Deny</string>
    <string name="ds">Block</string>
    <string name="dt">Internet</string>
    <string name="du">On</string>
    <string name="dv">Read MMS</string>
    <string name="dw">Read SMS</string>
    <string name="dx">Local/call recordings</string>
    <string name="dy">Call recordings</string>
    <string name="dz">Send MMS</string>
    <string name="e0">send SMS</string>
    <string name="e1">Turn on Bluetooth</string>
    <string name="e2">Turn on cellular data</string>
    <string name="e3">Turn on WLAN</string>
    <string name="e4">WLAN</string>
    <string name="e5">Exit</string>
    <string name="e6">Delete after sharing</string>
    <string name="e7">Share</string>
    <string name="e8">Still allow</string>
    <string name="e9">Deny to give permission</string>
    <string name="e_">No network connection. Please check your network settings.</string>
    <string name="ea">Network Settings</string>
    <string name="eb">Cancel</string>
    <string name="ec">Cancel download</string>
    <string name="ed">Cancel installation</string>
    <string name="ee">Delete</string>
    <string name="ef">Download</string>
    <string name="eg">Download failed</string>
    <string name="eh">Download completed, tap to install</string>
    <string name="ei" formatted="false">%s %s download completed</string>
    <string name="ej" formatted="false">Downloading %s %s</string>
    <string name="ek">Downloading</string>
    <string name="el">It will consume %s of cellular data</string>
    <string name="em">Update available %s</string>
    <string name="en">Download canceled</string>
    <string name="eo">Installation failed</string>
    <string name="ep">Install now</string>
    <string name="eq">Install later</string>
    <string name="er">Installing</string>
    <string name="es">Checking for update</string>
    <string name="et">Current app version %s</string>
    <string name="eu">Cancel download</string>
    <string name="ev">Failed to download</string>
    <string name="ew">Downloading %s%%</string>
    <string name="ex">New version found. Tap to update</string>
    <string name="ey">Failed to install</string>
    <string name="ez">Update file is downloaded and tap to install</string>
    <string name="f0">Installing...</string>
    <string name="f1">Current version is latest</string>
    <string name="f2">Download the latest version</string>
    <string name="f3">Check for update</string>
    <string name="f4">"What's new:"</string>
    <string name="f5">%s</string>
    <string name="f6">OK</string>
    <string name="f7">Restart to update</string>
    <string name="f8">Retry</string>
    <string name="f9">Ignore</string>
    <string name="f_">If you skip this version, you will not be prompted to install it</string>
    <string name="fa">Update completed</string>
    <string name="fb">Updated to the latest version %s</string>
    <string name="fc">Update now</string>
    <string name="fd">Update in roam (%s)</string>
    <string name="fe">Remind me later</string>
    <string name="ff">Download via mobile network?</string>
    <string name="fg" formatted="false">%s %s</string>
    <string name="fh" formatted="false">%s %s released</string>
    <string name="fi">Please wait</string>
    <string name="fj">Remind Later</string>
    <string name="fk">Release to refresh</string>
    <string name="fl">Loading</string>
    <string name="fm">Last refresh</string>
    <string name="gi">Local apps</string>
    <string name="gx">No route found</string>
    <string name="ha">Contacts</string>
    <string name="hg">File Manager</string>
    <string name="hl">Hot searches in Weather widget</string>
    <string name="hr">Messages</string>
    <string name="iu">Settings</string>
    <string name="iy">Edit trip</string>
    <string name="iz">Commute</string>
    <string name="ji">Search engine</string>
    <string name="jk">Slide up on Home screen to enter</string>
    <string name="k8">Add to Home Screen</string>
    <string name="l0">apps, video, news, etc.</string>
    <string name="l1">Featured</string>
    <string name="l3">Featured Content Push</string>
    <string name="l5">Quick App</string>
    <string name="lh">Search Settings</string>
    <string name="lm">App Function</string>
    <string name="ln">Uninstalled application</string>
    <string name="lo">App Download</string>
    <string name="lp">Installed apps</string>
    <string name="lq">Name of contact</string>
    <string name="lr">File in Device</string>
    <string name="ls">Home Card</string>
    <string name="lt">Text in Message</string>
    <string name="lu">Quick-launch apps</string>
    <string name="lv">"Item's name"</string>
    <string name="lw">Subfunctions of installed apps</string>
    <string name="m4">Preference</string>
    <string name="mi">Taxi</string>
    <string name="mj">Food</string>
    <string name="mk">Hotels</string>
    <string name="ml">Attractions</string>
    <string name="no">search_view_share_element</string>
    <string name="o8">不感兴趣</string>
    <string name="o9">这条内容我不喜欢</string>
    <string name="oi">举报垃圾内容</string>
    <string name="oj">内容低俗、标题夸张等</string>
</resources>