<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/np" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/nq" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.meizu.common.widget.SearchEditText android:ellipsize="end" android:id="@id/nr" android:paddingLeft="@dimen/ou" android:paddingRight="@dimen/ov" android:layout_width="fill_parent" android:layout_height="30.0dip" android:hint="@string/c6" android:singleLine="true" android:layout_centerVertical="true" android:imeOptions="actionSearch|flagNoFullscreen" android:fontFamily="sans-serif-medium" android:textAlignment="viewStart" android:paddingStart="@dimen/ou" android:paddingEnd="@dimen/ov" style="?attr/mzSearchEditTextStyle" />
        <ImageView android:id="@id/ns" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/oy" android:scaleType="centerInside" android:layout_alignRight="@id/nr" android:layout_centerVertical="true" android:contentDescription="@string/c9" android:layout_marginEnd="@dimen/oy" android:layout_alignEnd="@id/nr" style="?attr/mzSearchEditClearIconStyle" />
        <ImageView android:id="@id/nt" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/oy" android:scaleType="centerInside" android:layout_alignRight="@id/ns" android:layout_centerVertical="true" android:contentDescription="@string/cj" android:layout_marginEnd="@dimen/oy" android:layout_alignEnd="@id/ns" style="?attr/mzSearchEditVoiceIconStyle" />
    </RelativeLayout>
    <ImageView android:id="@id/nu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/oz" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/c8" android:layout_marginStart="@dimen/oz" android:layout_alignParentStart="true" style="?attr/mzSearchEditSearchIconStyle" />
</RelativeLayout>