<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/nq" android:layout_width="wrap_content" android:layout_height="wrap_content" android:baselineAligned="false" android:layout_marginStart="@dimen/p1">
        <RelativeLayout android:id="@id/nv" android:layout_width="0.0dip" android:layout_height="32.0dip" android:layout_weight="1.0">
            <com.meizu.common.widget.SearchEditText android:ellipsize="end" android:id="@id/nr" android:paddingLeft="@dimen/ou" android:paddingRight="@dimen/ov" android:layout_width="fill_parent" android:layout_height="30.0dip" android:hint="@string/c6" android:singleLine="true" android:layout_centerVertical="true" android:imeOptions="actionSearch|flagNoFullscreen" android:fontFamily="sans-serif-medium" android:textAlignment="viewStart" android:paddingStart="@dimen/ou" android:paddingEnd="@dimen/ov" style="?attr/mzSearchEditTextStyle" />
            <ImageView android:id="@id/ns" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/oy" android:scaleType="centerInside" android:layout_alignRight="@id/nr" android:layout_centerVertical="true" android:contentDescription="@string/c9" android:layout_marginEnd="@dimen/oy" android:layout_alignEnd="@id/nr" style="?attr/mzSearchEditClearIconStyle" />
            <ImageView android:id="@id/nt" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/oy" android:scaleType="centerInside" android:layout_alignRight="@id/ns" android:layout_centerVertical="true" android:contentDescription="@string/cj" android:layout_marginEnd="@dimen/oy" android:layout_alignEnd="@id/ns" style="?attr/mzSearchEditVoiceIconStyle" />
        </RelativeLayout>
        <LinearLayout android:gravity="center" android:id="@id/nw" android:layout_width="76.0dip" android:layout_height="fill_parent">
            <TextView android:textAppearance="?android:actionMenuTextAppearance" android:textColor="?android:actionMenuTextColor" android:gravity="center" android:id="@id/nx" android:background="?android:actionBarItemBackground" android:layout_width="64.0dip" android:layout_height="fill_parent" android:text="@string/c7" android:fontFamily="sans-serif-medium" style="?android:attr/actionButtonStyle" />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout android:id="@id/nu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/p1" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:layout_marginStart="@dimen/p1" android:layout_alignParentStart="true">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/oz" android:scaleType="centerInside" android:contentDescription="@string/c8" android:layout_marginStart="@dimen/oz" style="?attr/mzSearchEditSearchIconStyle" />
    </FrameLayout>
</RelativeLayout>