<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom|center" android:orientation="vertical" android:id="@id/xb" android:paddingTop="@dimen/if" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/xc" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/xd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/e7" android:singleLine="true" android:includeFontPadding="false" android:fontFamily="sans-serif-medium" />
        <TextView android:textSize="12.0sp" android:gravity="center" android:id="@id/xe" android:layout_width="wrap_content" android:layout_height="16.0dip" android:text="@string/w" android:singleLine="true" android:includeFontPadding="false" />
        <CheckBox android:textSize="16.0sp" android:textColor="@color/b4" android:gravity="center" android:id="@id/xf" android:layout_width="wrap_content" android:layout_height="24.0dip" android:text="@string/e6" android:singleLine="true" android:includeFontPadding="false" android:fontFamily="sans-serif-medium" android:paddingStart="9.0dip" style="@style/vs" />
    </LinearLayout>
    <flyme.support.v4.view.ViewPager android:id="@id/xg" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <com.meizu.sharewidget.widget.PageIndicator android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/xh" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="17.0dip" />
</LinearLayout>